# axum-notifications

./: .env  Cargo.toml  README.md
assets/: index.html  script.js
src/: main.rs  routes.rs  types.rs  websocket.rs
